<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    
    android:layout_height="match_parent"
    tools:context=".homeactivity">

    <TextView
        android:id="@+id/UserN_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:text="@string/user_name"
        android:textColor="@color/dark_blue"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationViewh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="3dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:id="@+id/notify_button"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@+id/UserN_account"
        android:paddingTop="20dp"
        android:text="@string/text_1"
        android:textColor="@color/white"
        android:textSize="32sp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:id="@+id/user_2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/notify_button"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:text="@string/text_2"
        android:textColor="@color/white"
        android:textSize="32sp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:id="@+id/user_3"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/user_2"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:text="@string/text_3"
        android:textColor="@color/white"
        android:textSize="30sp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:id="@+id/user_4"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/user_3"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:text="@string/text_4"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:id="@+id/user_5"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/user_4"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:text="@string/text_6"
        android:textColor="@color/white"
        android:textSize="30sp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:id="@+id/user_6"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/user_5"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:text="@string/text_7"
        android:textColor="@color/white"
        android:textSize="30sp" />

</RelativeLayout>